--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cron": "^4.3.3",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
-    "mongoose": "^8.13.2"
+    "mongoose": "^8.13.2",
+    "slugify": "^1.6.6"
   }
 }
