--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "mongoose": "^8.13.2",
+    "serverless-http": "^4.0.0",
     "slugify": "^1.6.6"
   }
 }
