--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "functions": {
     "server.js": {
-      "runtime": "@vercel/node"
+      "runtime": "@vercel/node@2.0.0"
     }
   },
   "routes": [
